# backend/docs/swagger.json
@@ -28,7 +28,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Data"
+                            "$ref": "#/definitions/handlers.Post"
                         }
                     },
                     "301": {
@@ -210,6 +210,32 @@
                 },
                 "lastname": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.Post": {
+            "type": "object",
+            "properties": {
+                "VoteCount": {
+                    "type": "integer"
+                },
+                "answerCount": {
+                    "type": "integer"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "createAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "viewCount": {
+                    "type": "integer"
                 }
             }
         },
